# Yjy_

./: README.md
MotorController/CANMotorController/devel/: .catkin  .rosinstall  setup.sh
MotorController/CANMotorController/devel/lib/lesson3/: can_bus_act_data  (+2 more)
MotorController/CANMotorController/src/lesson3/: CMakeLists.txt
MotorController/ROS培训/ROS┼α╤╡/╡┌╚²╜┌/: README.txt
MotorController/cybergear/: cybergear.py  motor.py  serial_control.py  test.py
MotorController/cybergear/cybergear/: __init__.py  pcan_cybergear.py
MotorController/cybergear/include/: motor.h
MotorController/cybergear/templates/: index.html
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/chassis_ctrl/: motion.h
devel/lib/chassis_ctrl/: gpio  joy  xyz
devel/lib/pkgconfig/: chassis_ctrl.pc  chassis_visual.pc  teleop_rviz_plugin.pc
devel/share/chassis_ctrl/cmake/: chassis_ctrl-msg-extras.cmake  chassis_ctrl-msg-paths.cmake  chassis_ctrlConfig.cmake
devel/share/chassis_visual/cmake/: chassis_visualConfig.cmake
devel/share/teleop_rviz_plugin/cmake/: teleop_rviz_pluginConfig.cmake
src/chassis_ctrl/: CMakeLists.txt  package.xml
src/chassis_ctrl/URDF/: model.urdf
src/chassis_ctrl/launch/: run.launch
src/chassis_ctrl/msg/: cordinateArray.msg  motion.msg
src/chassis_ctrl/rviz/: chassis_visual.rviz  sijuyanjiuyuan.rviz
src/chassis_ctrl/scripts/: chassis_ctrl.py  chassis_test.py  chassis_visual.py  gui.py  motor.py
src/chassis_ctrl/src/: gpio.cpp  joy.cpp  test.cpp
src/teleop_rviz_plugin/src/: drive_widget.cpp  teleop_panel.cpp
(+34 files in other folders)
